# intertitles

./: README.md  pyproject.toml
data/share/man/man1/: intertitles.1
examples/title_markup/: title.intertitles
intertitles/: __init__.py  __main__.py
